--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,29 @@
+$color-dark-gray: #8d8d8d;
+$color-gray: #bdbdbd;
+$color-light-gray: #efefef;
+$color-white: #eeeeee;
+$color-red: #ff1744;
+
+$breakpoint-lg: 1366px;
+$breakpoint-md: 768px;
+
+$font-weight-bold: 600;
+
+$font-size-14: 14px;
+$font-size-16: 16px;
+$font-size-18: 18px;
+$font-size-20: 20px;
+$font-size-22: 22px;
+$font-size-24: 24px;
+
 body {
-  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+  background-color: $color-white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a {
+  color: initial;
+  text-decoration: none; /* no underline */
 }
