--- a/src/pages/pokemon/list/styles.scss
+++ b/src/pages/pokemon/list/styles.scss
@@ -1,12 +1,12 @@
 @import "../../../styles/global.scss";
 
 .listPageContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: auto;
-  width: 90%;
+  width: 100%;
   max-width: $breakpoint-lg;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .listPageHeader {
     display: flex;
     flex-direction: column;
@@ -21,6 +21,13 @@
     .headerText {
       font-weight: $font-weight-bold;
       font-size: 20px;
+    }
+    input {
+      border: 1px solid $color-gray;
+      border-radius: 4px;
+      background-color: $color-light-gray;
+      padding: 8px;
+      margin: 8px;
     }
   }
   .listWrapper {
